syntax = "proto3";

package auth;

// AuthService provides authentication, authorization, and user management
service AuthService {
  // Register creates a new user account
  rpc Register (RegisterRequest) returns (AuthResponse);
  // Login authenticates a user with email and password
  rpc Login (LoginRequest) returns (AuthResponse);
  // RefreshToken generates a new access token using a refresh token
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
  // RevokeToken invalidates a refresh token
  rpc RevokeToken (RevokeTokenRequest) returns (EmptyResponse);
  // ValidateToken checks if an access token is valid
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  // RequestPasswordReset initiates a password reset request
  rpc RequestPasswordReset (PasswordResetRequest) returns (PasswordResetResponse);
  // ResetPassword completes a password reset using a reset token
  rpc ResetPassword (ResetPasswordRequest) returns (EmptyResponse);
  // ChangePassword allows authenticated users to change their password
  rpc ChangePassword (ChangePasswordRequest) returns (EmptyResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  string user_id = 3;
  string email = 4;
  string role = 5;
  string access_token = 6;
  string refresh_token = 7;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RevokeTokenRequest {
  string refresh_token = 1;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string role = 4;
  string message = 5;
}

message PasswordResetRequest {
  string email = 1;
}

message PasswordResetResponse {
  bool success = 1;
  string message = 2;
  string reset_token = 3;
}

message ResetPasswordRequest {
  string reset_token = 1;
  string new_password = 2;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message EmptyResponse {
  bool success = 1;
  string message = 2;
}
